--- a/Cal.ipynb
+++ b/Cal.ipynb
@@ -109,7 +109,9 @@
    "metadata": {},
    "source": [
     "<!-- ![title](images/Planing-craft-configuration-and-coordinate-systems.png) -->\n",
-    "![title](images/Planing-craft-configuration-and-coordinate-systems.png)![title](images/aaa.png)\n"
+    "![title](images/Planing-craft-configuration-and-coordinate-systems.png)![title](images/aaa.png)\n",
+    "![title](https://github.com/ghostangeler96/hello/blob/master/Planing-craft-configuration-and-coordinate-systems.png?raw=true)\n",
+    "![title](https://github.com/ghostangeler96/hello/blob/master/aaa.png?raw=true)\n"
    ]
   },
   {
